# otus-cpp-05_19-08-2021_matrix

./: CMakeLists.txt  main.cpp  matrix.h
.github/workflows/: release.yml
